link to LR in teh feature of software for novices

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -857,14 +857,17 @@ NOTE INTEGREATE HOW DESIGNING FOR AUTHENITITY IS A CHALLENGE HERE WHICH IS ALIGN
 
 ### Comparative observations on the use of a code playground
 
-Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users. To shed light on this conflict and to situate later findings, this section collates relevant observations from my journal notes and video data on how participants used the tools introduced. 
+Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users. To shed light on this conflict and to situate later findings, this section collates relevant observations from my journal notes and video data on how participants used the tools introduced.
+
+This section also explores how the features of a code playground align with aims of other specialist software designed to help novice coders (previously explored in LR). To recap these elements are steps to reducing syntax errors, shielding complexity, community sharing, supporting remixing.
+
 
 <!-- NOTE - DROP - MAKE MORE DIRECT
 While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools. -->
 
 
 
-**Complexity of set up**
+**Shielding complexity**
 
 Using a code playground removed the process of setting up a server for web development, and the delay and complexity of transferring files to the server. While the game code project consisted of several files of javascript, HTML and CSS, learners were shielded from the complexity of understanding how they were interlinked.
 
@@ -880,9 +883,12 @@ Code syntax errors (GL) highlighted via a red dot provided a quick visual indica
 In my design, issues of access for  participants were mitigated through shared log in details and through help from family members or other peers.
 CR Scratch.
 
-**Inspiring creativity**
+**Shared community and remix ability**
 
-Scratch has an online community inspiring sharing and remixing. While my design used Glitch community, which had this capacity, the use was much broader, and Glitch less useful. Thus my design was lacking.  
+The ability to easily remix community projects, supports the process of UMC. Specificaly, see inside in scratch. 
+
+
+While my design used Glitch community, which had this capacity, the use was much broader, and Glitch less useful. Thus my design was lacking.  
 
 <!-- In the video data analysed, there were practically no extended blockages to undertaking work related to the use of this environment. While this study does not attempt to quantify this factor, the experience compares very favourably to my experiences of using and teaching coding environments. -->
 
