moving sections and clarifying tools comparison

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -857,21 +857,17 @@ NOTE INTEGREATE HOW DESIGNING FOR AUTHENITITY IS A CHALLENGE HERE WHICH IS ALIGN
 
 ### Comparative observations on the use of a code playground
 
-Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users. To shed light on this conflict and to situate later findings, this section collates relevant observations from my journal notes and video data on how participants used the tools introduced.
 
-This section also explores how the features of a code playground align with aims of other specialist software designed to help novice coders (previously explored in LR). To recap these elements are steps to reducing syntax errors, shielding complexity, community sharing, supporting remixing.
+This section explores how the features of a code playground align with aims of other specialist software designed to help novice coders (previously explored in LR). To recap these elements are steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing,  remixing and other forms of collaboration.
+
+<!-- Self-contained so many things set up by default,
+a default screen size, asset creation tools, online community, comments and friend section.  -->
+
+Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users. To shed light on this conflict and to situate later findings, this section collates relevant observations from my journal notes and video data on how participants used the tools introduced.
 
 
 <!-- NOTE - DROP - MAKE MORE DIRECT
 While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools. -->
-
-
-
-**Shielding complexity**
-
-Using a code playground removed the process of setting up a server for web development, and the delay and complexity of transferring files to the server. While the game code project consisted of several files of javascript, HTML and CSS, learners were shielded from the complexity of understanding how they were interlinked.
-
-Scratch has many things set up by default, a default screen size, asset creation tools, online community, comments and friend section.  
 
 
 **Addressing code syntax errors**
@@ -885,8 +881,7 @@ CR Scratch.
 
 **Shared community and remix ability**
 
-The ability to easily remix community projects, supports the process of UMC. Specificaly, see inside in scratch. 
-
+The ability to easily remix community projects, supports the process of UMC. Specifically, see inside offer and remix offer when viewing scratch projects.
 
 While my design used Glitch community, which had this capacity, the use was much broader, and Glitch less useful. Thus my design was lacking.  
 
@@ -947,12 +942,23 @@ Fig 4.x, Changes made to the code on the left section take immediate effect in t
 
 The a game template served to remove technical barriers to getting immediate feedback and offered other affordances explored in the next section. -->
 
+**Shielding complexity**
+
+Using a code playground removed the process of setting up a server for web development, and the delay and complexity of transferring files to the server via FTP/SSH processes.
+
+While the game code project consisted of several files of javascript, HTML and CSS, learners were shielded from the complexity of understanding how they were interlinked.
+
+
+
+The examples above align with constructionist design principles,
+
+In particular  "Be careful about the use of black boxes" FIND SOURCE. This refers to the process of hiding away aspects or functionality of the code or processes. For example, in Scratch the process of setting up a canvas is preset. It is already present and visible on the creation of each new project and the user has no choice over the settings.
+
+In my design, I have made similar decisions to shield participants from unwelcome complexity to reduce cognitive load and alienation from unfamiliar language. However, because of my choice to use authentic tools, while the complexity remains in code view, I decided to use a starter template to deprioritise the impact of the underlying code complexity on the participants experience.
+
 
 ### Design choices of the half-baked template
 
-The examples above align with constructionist design principles used by the Scratch design team. An relevant design heuristic is - "Be careful about the use of black boxes" FIND SOURCE. This refers to the process of hiding away aspects or functionality of the code or processes. For example, in Scratch the process of setting up a canvas is preset. It is already present and visible on the creation of each new project and the user has no choice over the settings.
-
-In my design, I have made similar decisions to shield participants from unwelcome complexity to reduce cognitive load and alienation from unfamiliar language. However, because of my choice to use authentic tools, while the complexity remains in code view, I decided to use a starter template to deprioritise the impact of the underlying code complexity on the participants experience.
 
 In the domain of web technology, starter templates consist of pre-built collections of HTML, Javascript, CSS and other configuration files which allow users to avoid initial configuration and thus accelerate adding features to projects. For example the Next.js web framework comes with a large range of starter templates based on common requirements of web sites [@nelson_best_2023].
 
