--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -858,13 +858,24 @@ NOTE INTEGREATE HOW DESIGNING FOR AUTHENITITY IS A CHALLENGE HERE WHICH IS ALIGN
 ### Comparative observations on the use of a code playground
 
 
-This section explores how the features of a code playground align with aims of other specialist software designed to help novice coders (previously explored in LR). To recap these elements are steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing,  remixing and other forms of collaboration.
+
 
 <!-- Self-contained so many things set up by default,
 a default screen size, asset creation tools, online community, comments and friend section.  -->
 
-Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users. To shed light on this conflict and to situate later findings, this section collates relevant observations from my journal notes and video data on how participants used the tools introduced.
+Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users. My choice to use a text code environment risked maximising barriers to participation by not profiting from design decisions in specialist coding software to help novice coders (previously explored in LR).
 
+Those decisions / principles also address they key conflict / tension explored in this section. Coding is part partly due to X - and Y. [CF GOOD SUMMARY]
+
+These elements include steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration. To address this I explore my own design decisions that and existing features of a code playground align with those key principles.
+
+To shed light on this conflict and to situate later findings, this section surfaces observations from my journal notes and video data on how participants used the tools introduced.
+
+
+
+
+
+<!-- NOTE - WHERE EXACTLY ARE THEY EXPLORED? -->
 
 <!-- NOTE - DROP - MAKE MORE DIRECT
 While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools. -->
@@ -872,7 +883,10 @@ While the scope of this study is not on the micro-level of tool use, it is usefu
 
 **Addressing code syntax errors**
 
+Many software solutions This can be compared to block coding.
+
 Code syntax errors (GL) highlighted via a red dot provided a quick visual indication of where the error occurred. In pair work the non-coding peer would often notice and point out the red dot, thus preventing further errors.
+
 
 **Addressing access errors**
 
@@ -948,9 +962,7 @@ Using a code playground removed the process of setting up a server for web devel
 
 While the game code project consisted of several files of javascript, HTML and CSS, learners were shielded from the complexity of understanding how they were interlinked.
 
-
-
-The examples above align with constructionist design principles,
+The examples above align with constructionist design principles explored in the LR
 
 In particular  "Be careful about the use of black boxes" FIND SOURCE. This refers to the process of hiding away aspects or functionality of the code or processes. For example, in Scratch the process of setting up a canvas is preset. It is already present and visible on the creation of each new project and the user has no choice over the settings.
 
