FLESHING OUT part 3.

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -865,7 +865,7 @@ a default screen size, asset creation tools, online community, comments and frie
 
 Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users. My choice to use a text code environment risked maximising barriers to participation by not profiting from design decisions in specialist coding software to help novice coders (previously explored in LR).
 
-Those decisions / principles also address they key conflict / tension explored in this section. Coding is part partly due to X - and Y. [CF GOOD SUMMARY]
+Those decisions / principles also address they key conflict / tension explored in this section. Coding is part partly due to unfamilirity with tools and complexity of working environment and X - and Y. [CF GOOD SUMMARY].
 
 These elements include steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration. To address this I explore my own design decisions that and existing features of a code playground align with those key principles.
 
@@ -889,6 +889,9 @@ Code syntax errors (GL) highlighted via a red dot provided a quick visual indica
 
 
 **Addressing access errors**
+
+Code playgrounds address issues of complexity party by providing. 
+The
 
 In my design, issues of access for  participants were mitigated through shared log in details and through help from family members or other peers.
 CR Scratch.
