--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -890,8 +890,11 @@ Code syntax errors (GL) highlighted via a red dot provided a quick visual indica
 
 **Addressing access errors**
 
-Code playgrounds address issues of complexity party by providing. 
-The
+Code playgrounds address issues of complexity party by providing a self contained server.
+ALSO - BELOW IN COMPLEXITY.  
+
+However the online element also offers friction in terms of logging in .
+
 
 In my design, issues of access for  participants were mitigated through shared log in details and through help from family members or other peers.
 CR Scratch.
