intro difficulties of coding as barrier

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -855,8 +855,8 @@ NOTE INTEGREATE HOW DESIGNING FOR AUTHENITITY IS A CHALLENGE HERE WHICH IS ALIGN
 <!-- In the activities of study, a high degree of authenticity made possible, in a material sense, by the digital nature of the learning resources. Beyond a general purpose computer, no prohibitive equipment is needed. -->
 
 
-### Comparative observations on the use of a code playground
 
+### Design adaptations to facilitate novice use of a code playground
 
 
 
@@ -870,10 +870,6 @@ Those decisions / principles also address they key conflict / tension explored i
 These elements include steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration. To address this I explore my own design decisions that and existing features of a code playground align with those key principles.
 
 To shed light on this conflict and to situate later findings, this section surfaces observations from my journal notes and video data on how participants used the tools introduced.
-
-
-
-
 
 <!-- NOTE - WHERE EXACTLY ARE THEY EXPLORED? -->
 
