--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -879,9 +879,13 @@ While the scope of this study is not on the micro-level of tool use, it is usefu
 
 **Addressing code syntax errors**
 
-Many software solutions This can be compared to block coding.
+Many software projects aimed at for novices use visual coding (block coding) approaches to reduce complexities of code use. This process reduced possibilities for syntax errors and often provides a limited set of blocks to reduce complexitiy. While this approach not explored here for reasons previously outlined, there are some features of the glitch code playround which help. For example, the environment can detect the file type as javascript from the file extension and then uses a static analysis tool (linter) scan the code for signs of inconsistencies of code and syntax errors and highlight them [@tomasdottir_why_2017].
 
-Code syntax errors (GL) highlighted via a red dot provided a quick visual indication of where the error occurred. In pair work the non-coding peer would often notice and point out the red dot, thus preventing further errors.
+In glitch such code syntax errors (GL) are highlighted via a red dot provided a quick visual indication of where the error occurred. In addition if the user hovered over the dot would give an error message. 
+
+On several occasions in analysis of pair interactions, I observed the non-coding peer notice and point out the red dot, thus preventing further errors.
+
+
 
 
 **Addressing access errors**
