--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -881,20 +881,16 @@ While the scope of this study is not on the micro-level of tool use, it is usefu
 
 Many software projects aimed at for novices use visual coding (block coding) approaches to reduce complexities of code use. This process reduced possibilities for syntax errors and often provides a limited set of blocks to reduce complexitiy. While this approach not explored here for reasons previously outlined, there are some features of the glitch code playround which help. For example, the environment can detect the file type as javascript from the file extension and then uses a static analysis tool (linter) scan the code for signs of inconsistencies of code and syntax errors and highlight them [@tomasdottir_why_2017].
 
-In glitch such code syntax errors (GL) are highlighted via a red dot provided a quick visual indication of where the error occurred. In addition if the user hovered over the dot would give an error message. 
+In glitch such code syntax errors (GL) are highlighted via a red dot provided a quick visual indication of where the error occurred. In addition if the user hovered over the dot would give an error message.
 
-On several occasions in analysis of pair interactions, I observed the non-coding peer notice and point out the red dot, thus preventing further errors.
+On several occasions in analysis of pair interactions, I observed the non-coding peer notice and point out the red dot, thus preventing further errors. The process worked especially well when altering existing templated code, a process which is explored in the next section.
 
+**Addressing access (and environment) issues**
 
+MOVE TO LR.
+The process of running web code can be complicated by setting up a server environment locally to test and then finding and uploading to a web server. Code playground allow users to circumvent such problems. While originally designed more for problem solving, a service more recent code playgrounds provide is to act as a more permanent host for web projects.  
 
-
-**Addressing access errors**
-
-Code playgrounds address issues of complexity party by providing a self contained server.
-ALSO - BELOW IN COMPLEXITY.  
-
-However the online element also offers friction in terms of logging in .
-
+As explored in the LT, Code playgrounds address issues of complexity of web coding part by providing a self contained server. However for novice  users the web location still also offers friction in terms of digital lieracy issues of logging in, remembering passwords, linking to email accounts for password reminders. To circumvent these issues in P2 and P3 all participants and facilitators used a shared account for code playground the graphics editor.
 
 In my design, issues of access for  participants were mitigated through shared log in details and through help from family members or other peers.
 CR Scratch.
