--- a/_posts/thesis_chapters/tocs/2023-12-6-Methods.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2023-12-6-Methods.md_toc.md
@@ -13,6 +13,11 @@
         -   [Restricted vs extended community - e.g. why not scratch
             with online community? - MOVE TO DISCUSSION ON
             PLAYTESTING?](#restricted-vs-extended-community---e.g.-why-not-scratch-with-online-community---move-to-discussion-on-playtesting)
+    -   [Note this has been moved from Design chapter so needs a place
+        to
+        sit.](#note-this-has-been-moved-from-design-chapter-so-needs-a-place-to-sit.)
+    -   [Using Physical Maps of Missions as Game Design
+        Patterns](#using-physical-maps-of-missions-as-game-design-patterns)
     -   [Barriers of identity hardcore coding & dysfunctional group
         work - REALLY COMPRESS UNLESS DATA BECOMES PRESENT - USE AS
         BASIS FOR
