--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -8,7 +8,6 @@ layout: post
 categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
-
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Chapter Introduction](#chapter-introduction)
 -   [Exploring issues and context from practitioner interviews and
@@ -16,19 +15,20 @@ title: 4. Exploration of the Formative Learning Design Process
     research](#exploring-issues-and-context-from-practitioner-interviews-and-existing-research)
 -   [Short vignette illustrating shifts in scope of
     activity](#short-vignette-illustrating-shifts-in-scope-of-activity)
-    -   [Context of Vignette](#context-of-vignette)
-    -   [Commentary on Vignette](#commentary-on-vignette)
+    -   [Vignette 4.1 - An example of game making activity in
+        P2](#vignette-4.1---an-example-of-game-making-activity-in-p2)
+        -   [Table of Vignette](#table-of-vignette)
+    -   [Description of levels of activity illustrated using the
+        vignette](#description-of-levels-of-activity-illustrated-using-the-vignette)
         -   [Environmental factors and
             objectives](#environmental-factors-and-objectives)
         -   [Larger objective - Making games for an
             audience](#larger-objective---making-games-for-an-audience)
         -   [Mid-level objective - Implementing game
             elements](#mid-level-objective---implementing-game-elements)
-        -   [Smaller objective / actions - Implementing discrete code
+        -   [Smaller objectives and actions - Implementing discrete code
             and design
-            structures](#smaller-objective-actions---implementing-discrete-code-and-design-structures)
-    -   [Using scopes of activity as a tool for
-        analysis.](#using-scopes-of-activity-as-a-tool-for-analysis.)
+            structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures)
 -   [Summary of design evolution](#summary-of-design-evolution)
     -   [P1: Explorations and
         innovations](#p1-explorations-and-innovations)
@@ -39,57 +39,54 @@ title: 4. Exploration of the Formative Learning Design Process
         settings](#p4-adapting-to-makecode-arcade-and-more-formal-settings)
 -   [Conflicts and design tensions experienced by participants and
     facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
--   [1. Identity hardcore coding & dysfunctional group
-    work](#identity-hardcore-coding-dysfunctional-group-work)
--   [2. Facilitator conflict addressing the Play
-    Paradox](#facilitator-conflict-addressing-the-play-paradox)
-    -   [Using Physical Maps of Missions as Game Design
-        Patterns](#using-physical-maps-of-missions-as-game-design-patterns)
-        -   [Learning Dimensions Map](#learning-dimensions-map)
-        -   [Observations on tensions which the learning and
-            navigational maps have potential to
-            address.](#observations-on-tensions-which-the-learning-and-navigational-maps-have-potential-to-address.)
-        -   [Resolving the conflict in an informal setting by ignoring
-            it](#resolving-the-conflict-in-an-informal-setting-by-ignoring-it)
--   [3. Participant conflict due to lack of access and familiarity to
-    tools](#participant-conflict-due-to-lack-of-access-and-familiarity-to-tools)
+-   [1. Facilitator conflict addressing tensions between privileging
+    participant choices or underlying computing
+    concepts](#facilitator-conflict-addressing-tensions-between-privileging-participant-choices-or-underlying-computing-concepts)
+    -   [Learning Dimensions Map](#learning-dimensions-map)
+    -   [Observations on tensions which the learning and navigational
+        maps have potential to
+        address.](#observations-on-tensions-which-the-learning-and-navigational-maps-have-potential-to-address.)
+-   [2. Conflicts due to identity clashes and dysfunctional group
+    work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
+-   [3. Tensions due to lack of access and familiarity to tools and
+    processes](#tensions-due-to-lack-of-access-and-familiarity-to-tools-and-processes)
     -   [Motivations around in choice of
         toolset](#motivations-around-in-choice-of-toolset)
-    -   [Code playground (as IDE?)](#code-playground-as-ide)
-        -   [Addressing complexity of code environment with code
-            playground](#addressing-complexity-of-code-environment-with-code-playground)
+    -   [Design adaptations to facilitate novice use of a code
+        playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
+        -   [Addressing code syntax
+            errors](#addressing-code-syntax-errors)
+        -   [Addressing access (and environment)
+            issues](#addressing-access-and-environment-issues)
+        -   [Shared community and remix
+            ability](#shared-community-and-remix-ability)
+        -   [Distributed vs. self-contained approaches to asset
+            creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
+        -   [Shielding complexity of environment (duplication with
+            above?)](#shielding-complexity-of-environment-duplication-with-above)
     -   [Design choices of the half-baked
         template](#design-choices-of-the-half-baked-template)
-        -   [Design behaviours encouraged through use of game
-            template](#design-behaviours-encouraged-through-use-of-game-template)
-        -   [Introducing the quick start
-            cards](#introducing-the-quick-start-cards)
+        -   [Key Design affordances included in the game
+            template](#key-design-affordances-included-in-the-game-template)
         -   [Observations on design behaviours encouraged through use of
             game
             template](#observations-on-design-behaviours-encouraged-through-use-of-game-template)
 -   [4. Participant conflict due to lack of relevant technical
     support](#participant-conflict-due-to-lack-of-relevant-technical-support)
-    -   [Linear and stand-alone tutorial and code snippet
-        resources](#linear-and-stand-alone-tutorial-and-code-snippet-resources)
-    -   [Tensions and related to navigation of various documentations
-        sources](#tensions-and-related-to-navigation-of-various-documentations-sources)
-    -   [Using of a collection of game design
-        patterns](#using-of-a-collection-of-game-design-patterns)
-    -   [Tactical structuring of the pattern
-        collection](#tactical-structuring-of-the-pattern-collection)
--   [Discussion of design issues](#discussion-of-design-issues)
-    -   [Summary of barriers and tensions explored in this
-        chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
-    -   [Discussion on Authenticity of
-        Tools](#discussion-on-authenticity-of-tools)
-        -   [Analysis in relation to existing research on related design
-            toolsets](#analysis-in-relation-to-existing-research-on-related-design-toolsets)
-        -   [Comparing my design to Scratch and
-            Microworlds](#comparing-my-design-to-scratch-and-microworlds)
-        -   [Conclusion on authenticity](#conclusion-on-authenticity)
+    -   [Characteristics of different forms of supporting
+        documentation](#characteristics-of-different-forms-of-supporting-documentation)
+    -   [Structuring and using a collection of game design
+        patterns](#structuring-and-using-a-collection-of-game-design-patterns)
+-   [Chapter Discussion](#chapter-discussion)
+    -   [Discussion on Authenticity of Tools and
+        Resources](#discussion-on-authenticity-of-tools-and-resources)
     -   [On the emergent and mutual nature of the design and research
         process AND link to
         agency](#on-the-emergent-and-mutual-nature-of-the-design-and-research-process-and-link-to-agency)
+        -   [Inactivity illuminating the play
+            paradox](#inactivity-illuminating-the-play-paradox)
+    -   [Summary of barriers and tensions explored in this
+        chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
     -   [Link to next chapter](#link-to-next-chapter)
 
 ## Research Questions - June 2023
@@ -877,7 +874,7 @@ To shed light on this conflict and to situate later findings, this section surfa
 While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools. -->
 
 
-**Addressing code syntax errors**
+#### Addressing code syntax errors
 
 Many software projects aimed at for novices use visual coding (block coding) approaches to reduce complexities of code use. This process reduced possibilities for syntax errors and often provides a limited set of blocks to reduce complexitiy. While this approach not explored here for reasons previously outlined, there are some features of the glitch code playround which help. For example, the environment can detect the file type as javascript from the file extension and then uses a static analysis tool (linter) scan the code for signs of inconsistencies of code and syntax errors and highlight them [@tomasdottir_why_2017].
 
@@ -885,36 +882,30 @@ In glitch such code syntax errors (GL) are highlighted via a red dot provided a 
 
 On several occasions in analysis of pair interactions, I observed the non-coding peer notice and point out the red dot, thus preventing further errors. The process worked especially well when altering existing templated code, a process which is explored in the next section.
 
-**Addressing access (and environment) issues**
 
-MOVE TO LR.
-The process of running web code can be complicated by setting up a server environment locally to test and then finding and uploading to a web server. Code playground allow users to circumvent such problems. While originally designed more for problem solving, a service more recent code playgrounds provide is to act as a more permanent host for web projects.  
 
-As explored in the LT, Code playgrounds address issues of complexity of web coding part by providing a self contained server. However for novice  users the web location still also offers friction in terms of digital lieracy issues of logging in, remembering passwords, linking to email accounts for password reminders. To circumvent these issues in P2 and P3 all participants and facilitators used a shared account for code playground the graphics editor.
-
-In my design, issues of access for  participants were mitigated through shared log in details and through help from family members or other peers.
-CR Scratch.
-
-**Shared community and remix ability**
+#### Shared community and remix ability
 
 The ability to easily remix community projects, supports the process of UMC. Specifically, see inside offer and remix offer when viewing scratch projects.
 
 While my design used Glitch community, which had this capacity, the use was much broader, and Glitch less useful. Thus my design was lacking.  
 
-<!-- In the video data analysed, there were practically no extended blockages to undertaking work related to the use of this environment. While this study does not attempt to quantify this factor, the experience compares very favourably to my experiences of using and teaching coding environments. -->
 
+
+
+<!-- In the video data analysed, there were practically no extended blockages to undertaking work related to the use of this environment. While this study does not attempt to quantify this factor, the experience compares very favourably to my experiences of using and teaching coding environments. -->
 
 <!-- In my design the tools set is distinct from tools like Scratch, Logo in that while those tools were designed to be self-contained, the use of a JS library in a web coding environment is more open-ended. -->
 <!-- In my design, tools are more authentic and familiar in terms of using a professional framework and a web technology around which the internet browser is based on. -->
 <!-- #### Creation and migration of graphical and audio assets. -->
 
-**Distributed vs. self-contained approaches to asset creation**
+#### Distributed vs. self-contained approaches to asset creation
 
+One element of code project creation is creating and managing assets. Some novice tools, following the pioneering example of Scratch,  provide a library of prebuilt assets and tools within the environment to alter or creation graphical and audio multimedia assets. The self-contained of scratch has this reduces possibility for compounding errors and complexity caused by file formats, migration of data.
+
+<!-- In Scratch there are tabs which host simplified graphical and audio studios. Design decisions prioritise ease of use and the ability to record audio right into the program.  -->
 
 In P1, I used a variety of graphical and audio tools including:  Piskel to create sprite characters; Scratch to create backgrounds; Audacity and freesound.org record and edit audio for effects; Sonic Pi for background music; and Bxr online tool for sound effects. Participants would then save assets in a compatible format, upload them to the code playground, and link the file using a line of code.
-
-In Scratch there are tabs which host simplified graphical and audio studios. Design decisions prioritise ease of use and the ability to record audio right into the program. The self-contained of scratch has this reduces possibility for compounding errors and complexity caused by file formats, migration of data.
-
 
 While in my design, there is greater friction caused by the process of migrating assets, I observed a palpable a sense of achievement when participants succeeded in seeing and hearing their creations in their game after making the final changes in code. The reward seemed to be greater due to the difficulty caused by the unfamiliar environment and processes.
 
@@ -958,21 +949,22 @@ Fig 4.x, Changes made to the code on the left section take immediate effect in t
 
 The a game template served to remove technical barriers to getting immediate feedback and offered other affordances explored in the next section. -->
 
-**Shielding complexity**
+#### Shielding complexity of environment and access
 
-Using a code playground removed the process of setting up a server for web development, and the delay and complexity of transferring files to the server via FTP/SSH processes.
+As explored in the LT, Code playgrounds address issues of complexity of web coding part by providing a self contained server. However for novice  users the web location still also offers friction in terms of digital literacy issues of logging in, remembering passwords, linking to email accounts for password reminders. To circumvent these issues in P2 and P3 all participants and facilitators used a shared account for code playground the graphics editor.
 
-While the game code project consisted of several files of javascript, HTML and CSS, learners were shielded from the complexity of understanding how they were interlinked.
+A game code project using the chosen framework phaser will consisted of several interlinked files of javascript, HTML and CSS and image files. The process is relatively complex both semantically and practically to enact from first principles.
 
-The examples above align with constructionist design principles explored in the LR
+I therefore decided to shield learners were shielded from this complexity by using a starting template with base version of the files already created with the links already coded.  
 
-In particular  "Be careful about the use of black boxes" FIND SOURCE. This refers to the process of hiding away aspects or functionality of the code or processes. For example, in Scratch the process of setting up a canvas is preset. It is already present and visible on the creation of each new project and the user has no choice over the settings.
+This decision mirrors the design choice in Scratch and Code.org sprite and game labs to create a default canvas screen size of the project. It is already present and visible on the creation of each new project and the user has no choice over the settings. This preset design decision align with a constructionist design principle "be careful about the use of black boxes" FIND SOURCE.
 
-In my design, I have made similar decisions to shield participants from unwelcome complexity to reduce cognitive load and alienation from unfamiliar language. However, because of my choice to use authentic tools, while the complexity remains in code view, I decided to use a starter template to deprioritise the impact of the underlying code complexity on the participants experience.
+A black box here refers to the process of hiding away aspects or functionality of the code or processes.  The choice here to have a default for the canvas size is to reduce initial barriers to getting started, so the user is not presented with unfamiliar options at the start of the making process.
+
+In my design, I have made similar decisions to shield participants from complexity to reduce cognitive load and alienation from unfamiliar language. However, because of my choice to use authentic tools, while the complexity remains in code view, I decided to use a starter template to de-prioritise the impact of the underlying code complexity on the participants experience.
 
 
-### Design choices of the half-baked template
-
+### Design choices of the starter game template
 
 In the domain of web technology, starter templates consist of pre-built collections of HTML, Javascript, CSS and other configuration files which allow users to avoid initial configuration and thus accelerate adding features to projects. For example the Next.js web framework comes with a large range of starter templates based on common requirements of web sites [@nelson_best_2023].
 
