--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -817,8 +817,6 @@ One conflict, which surfaced in P1, stemmed from unfamiliarity with tools and re
 
 While, tensions stemming from gaps in knowledge and practice are commonly addressed in formal learning environments through forms of instruction, the informal nature of this learning setting made direct teaching approaches unappealing [EXPLORED SOMEWHERE ELSE?]. In P1 I trialled brief class instruction of key coding concepts, e.g. logic statements, that I judged to be relevant to the whole group. Despite trying to limit the time spent on instruction, linking to their experiences and making the process informal, my journal notes reflecting on these interventions were unfavourable. Instead, I was keen to align with the motivational potential of hands-on (learning by experience) approaches to STEM education [@holstermann_hands-activities_2010].
 
-
-
 SUM UP THE CONFLICT / TENSION MORE CLEARLY
 
 The crux of the challenge involved designing a bespoke  game authoring environment by adapting existing tools and embedding where possible affordances within that toolset to facilitate participants to address gaps in their knowledge without needing explicit instruction. The following sections explore the evolution of the tool selection and the tool use of participants in response to this conflict in the game making activity system.
@@ -836,11 +834,9 @@ One motivation was to align to authentic web technology due to my previous exper
 
 While my choice of open source digital tools allowed for a high level of aligning with professional practices, it was also potentially complex in terms of use of tools.
 
-
-
 <!-- As explored in the literature review, an extensive body of research on the design motivations and impact on learners exists for the creative coding tools Scratch.  -->
 
-A common question for this research is why not use Scratch (see LR / Glossary)? While Scratch, is aimed a broad range of media creation, much of this research involves game making as a popular genre of media of young people. I chose to not use Scratch for this study, partly as it was well researched and partly to prioritise authenticity of tool set.  
+<!-- A common question for this research is why not use Scratch (see LR / Glossary)? While Scratch, is aimed a broad range of media creation, much of this research involves game making as a popular genre of media of young people. I chose to not use Scratch for this study, partly as it was well researched and partly to prioritise authenticity of tool set.   -->
 
 My motivation for choice of code language (Javascript, Phaser) was driven by desire to be authentic and extensible. The use of glitch.com as a code playground significantly reduced technical barriers for students related to this choice. In terms of first impressions, learners first experience of the experience was in the process of playing a game in a webpage and controlling the character using the computers arrow/ cursor keys which for many was a familiar process.
 
@@ -851,18 +847,12 @@ NOTE INTEGREATE HOW DESIGNING FOR AUTHENITITY IS A CHALLENGE HERE WHICH IS ALIGN
 <!-- NOTE - PERHAPS EXPLORE COMPLEXITIY OF IDES AS A BARRIER IN RESEARCH - SEE BLUE JAY AND GREEN FOOT TRAINING IDEs -->
 <!-- In the activities of study, a high degree of authenticity made possible, in a material sense, by the digital nature of the learning resources. Beyond a general purpose computer, no prohibitive equipment is needed. -->
 
-
-
 ### Design adaptations to facilitate novice use of a code playground
-
-
 
 <!-- Self-contained so many things set up by default,
 a default screen size, asset creation tools, online community, comments and friend section.  -->
 
-Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users. My choice to use a text code environment risked maximising barriers to participation by not profiting from design decisions in specialist coding software to help novice coders (previously explored in LR).
-
-Those decisions / principles also address they key conflict / tension explored in this section. Coding is part partly due to unfamilirity with tools and complexity of working environment and X - and Y. [CF GOOD SUMMARY].
+Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users. My choice to use a text code environment risked maximising barriers to participation by not profiting from design decisions in specialist coding software to help novice coders (previously explored in LR). Those decisions / principles also address they key conflict / tension explored in this section. Coding is part partly due to unfamiliarity with tools and complexity of working environment and X - and Y. [CF GOOD SUMMARY].
 
 These elements include steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration. To address this I explore my own design decisions that and existing features of a code playground align with those key principles.
 
@@ -878,19 +868,7 @@ While the scope of this study is not on the micro-level of tool use, it is usefu
 
 Many software projects aimed at for novices use visual coding (block coding) approaches to reduce complexities of code use. This process reduced possibilities for syntax errors and often provides a limited set of blocks to reduce complexitiy. While this approach not explored here for reasons previously outlined, there are some features of the glitch code playround which help. For example, the environment can detect the file type as javascript from the file extension and then uses a static analysis tool (linter) scan the code for signs of inconsistencies of code and syntax errors and highlight them [@tomasdottir_why_2017].
 
-In glitch such code syntax errors (GL) are highlighted via a red dot provided a quick visual indication of where the error occurred. In addition if the user hovered over the dot would give an error message.
-
-On several occasions in analysis of pair interactions, I observed the non-coding peer notice and point out the red dot, thus preventing further errors. The process worked especially well when altering existing templated code, a process which is explored in the next section.
-
-
-
-#### Shared community and remix ability
-
-The ability to easily remix community projects, supports the process of UMC. Specifically, see inside offer and remix offer when viewing scratch projects.
-
-While my design used Glitch community, which had this capacity, the use was much broader, and Glitch less useful. Thus my design was lacking.  
-
-
+In glitch such code syntax errors (GL) are highlighted via a red dot provided a quick visual indication of where the error occurred. In addition if the user hovered over the dot would give an error message. In analysis of pair interactions, I frequently (how much?) observed the non-coding peer notice and point out the red dot, thus preventing further errors. The process worked especially well when altering existing templated code, a process which is explored in the next section.
 
 
 <!-- In the video data analysed, there were practically no extended blockages to undertaking work related to the use of this environment. While this study does not attempt to quantify this factor, the experience compares very favourably to my experiences of using and teaching coding environments. -->
@@ -948,6 +926,15 @@ One design principle explored in the literature review [@resnick_designing_2013]
 Fig 4.x, Changes made to the code on the left section take immediate effect in the right-hand preview window
 
 The a game template served to remove technical barriers to getting immediate feedback and offered other affordances explored in the next section. -->
+
+
+#### Shared community and remix ability
+
+NOTE - REMOVE SHARED COMMMUNITY AS NOT VERY RELEVANT FOR THIS PROJECT? 
+
+The ability to easily remix community projects, supports the process of becoming familiar with, and using other projects or approaches as a base. This is not just a negative copying function but one that encourages playful curiosity. It is also a foundation of professional practice [@kotsopoulos_pedagogical_2017-1].  The concept has become embedded in distributed revision control tools such as git as forking. (DEVELOP THE LINK WITH INTERNET / REMIX CULTURE?). The remix process also aligns with the use and modify stage of the UMC pedagogy explored in the LR.
+
+Practically, in novice coding communities, this is encouraged by the use of community galleries and buttons encouraging. In Scratch this is seen in buttons named see inside and remix when viewing projects. Similarly both the Thimble (used in P1) and Glitch (used in P2 and P3) prominently featured remix buttons and view source buttons in the community interface. The shared community element on the other hand was quite different for glitch due to its very mixed user base and range of different web based projects. In this learning design I took a decision to not promote with existing online communities but to focus instead on internal sharing of projects between the group.
 
 #### Shielding complexity of environment and access
 
