--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -811,13 +811,12 @@ That week I had omitted them as I felt a sense of urgency coming from families t
 
 In the terminology of activity theory, a conflicts arose due to a contradictions between the desire of participants to use the tools to create games and their lack of experience and knowledge of them. This often resulted in frustration and paralysis in the activity in question.
 
-NOTE  - VERY SIMILAR FOR NEXT CONFLICT - GROUP OR MAKE DISTINCT.
-
 One conflict, which surfaced in P1, stemmed from unfamiliarity with tools and resulted in frustration and ultimately inaction. In participant feedback for P1, one parent of the family described in the previous section indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach.
 
-While, tensions stemming from gaps in knowledge and practice are commonly addressed in formal learning environments through forms of instruction, the informal nature of this learning setting made direct teaching approaches unappealing [EXPLORED SOMEWHERE ELSE?]. In P1 I trialled brief class instruction of key coding concepts, e.g. logic statements, that I judged to be relevant to the whole group. Despite trying to limit the time spent on instruction, linking to their experiences and making the process informal, my journal notes reflecting on these interventions were unfavourable. Instead, I was keen to align with the motivational potential of hands-on (learning by experience) approaches to STEM education [@holstermann_hands-activities_2010].
+While, tensions stemming from gaps in knowledge and practice are commonly addressed in formal learning environments through forms of instruction, the informal nature of this learning setting allowed for more flexible approaches. In P1 I trialled brief class instruction of key coding concepts, e.g. logic statements, that I judged to be relevant to the whole group. Despite trying to limit the time spent on instruction, linking to their experiences and making the process informal, my journal notes reflecting on these interventions were unfavourable. Instead, I was keen to align with the motivational potential of hands-on (learning by experience) approaches to STEM education [@holstermann_hands-activities_2010].
 
 SUM UP THE CONFLICT / TENSION MORE CLEARLY
+NOTE  - VERY SIMILAR FOR NEXT CONFLICT - GROUP OR MAKE DISTINCT.
 
 The crux of the challenge involved designing a bespoke  game authoring environment by adapting existing tools and embedding where possible affordances within that toolset to facilitate participants to address gaps in their knowledge without needing explicit instruction. The following sections explore the evolution of the tool selection and the tool use of participants in response to this conflict in the game making activity system.
 
@@ -930,7 +929,7 @@ The a game template served to remove technical barriers to getting immediate fee
 
 #### Shared community and remix ability
 
-NOTE - REMOVE SHARED COMMMUNITY AS NOT VERY RELEVANT FOR THIS PROJECT? 
+NOTE - REMOVE SHARED COMMMUNITY AS NOT VERY RELEVANT FOR THIS PROJECT?
 
 The ability to easily remix community projects, supports the process of becoming familiar with, and using other projects or approaches as a base. This is not just a negative copying function but one that encourages playful curiosity. It is also a foundation of professional practice [@kotsopoulos_pedagogical_2017-1].  The concept has become embedded in distributed revision control tools such as git as forking. (DEVELOP THE LINK WITH INTERNET / REMIX CULTURE?). The remix process also aligns with the use and modify stage of the UMC pedagogy explored in the LR.
 
